# Quake3e

./: .fuse_hidden0000cae100000005  .fuse_hidden0000deb300000007  .gitignore  CMakeLists.txt  COPYING.txt  Makefile  README.md  id-readme.txt  make_ASM.sh  make_all.sh  make_debug.sh  make_wipe-debug.sh  make_wipe-object.sh
.github/workflows/: build.yml
asm/debug/ded/: sv_main.asm
asm/release/client/: cl_main.asm
asm/release/ded/: sv_main.asm
cmake_modules/: FindSDL2.cmake
code/client/: cl_console.c  cl_curl.c  cl_main.c  client.h
code/qcommon/: cm_patch.c  cm_patch.h  common.c  q_shared.h
code/renderer/: tr_init.c
code/renderer2/: tr_extramath.c  tr_init.c
code/renderercommon/font/: tr_font.c
code/renderervk/: tr_backend.c  tr_common.h  tr_image.c  tr_init.c  tr_local.h  tr_shader.c  tr_surface.c
code/sdl/: sdl_snd.c
code/win32/msvc2005/: quake3e-ded.vcproj  quake3e.vcproj
code/win32/msvc2017/: quake3ded.vcxproj.filters  quake3e-ded.vcxproj  quake3e-ded.vcxproj.filters  quake3e.vcxproj  quake3e.vcxproj.filters
codezxcv/asm/: qasm.h
codezxcv/botlib/: aasfile.h  be_aas.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  be_ai_weap.c  be_ai_weap.h  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_ea.h  be_interface.c  be_interface.h  botlib.h  (+12 more)
codezxcv/co/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_polylib.c  cm_polylib.h  cm_public.h  cm_trace.c  cmd.c  co.h  common.c  cvar.c  files.c  history.c  huffman.c  huffman_static.c  keys.c  md4.c  md5.c  msg.c  net_chan.c  net_ip.c  q_platform.h  q_shared.h  qfiles.h  surfaceflags.h  unzip.c  unzip.h  vm.c  vm_interpreted.c  vm_local.h
codezxcv/gfxer/: iqm.h  qgl.h  tr_animation.c  tr_arb.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_flares.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
codezxcv/gfxer2/: glext.h  qgl.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_dsa.c  tr_dsa.h  tr_extensions.c  tr_extramath.c  tr_extratypes.h  tr_fbo.c  tr_flares.c  tr_glsl.c  tr_image.c  tr_image_dds.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_postprocess.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_vbo.c  tr_world.c
codezxcv/gfxercommon/: tr_image_bmp.c  tr_image_jpg.c  tr_image_pcx.c  tr_image_png.c  tr_image_tga.c  tr_noise.c  tr_public.h  tr_types.h
codezxcv/gfxervk/: iqm.h  tr_animation.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_common.h  tr_curve.c  tr_font.c  tr_image.c  tr_init.c  tr_light.c  tr_local.h  tr_main.c  tr_marks.c  tr_mesh.c  tr_model.c  tr_model_iqm.c  tr_scene.c  tr_shade.c  tr_shade_calc.c  tr_shader.c  tr_shadows.c  tr_sky.c  tr_surface.c  tr_world.c  vk.c  vk.h  vk_flares.c  vk_vbo.c
codezxcv/host/: host.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_filter.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
codezxcv/libjpeg/: README  jaricom.c  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdapistd.c  jdarith.c  jdatadst.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdpostct.c  jdsample.c  jdtrans.c  jerror.c  jerror.h  jfdctflt.c  jfdctfst.c  (+15 more)
codezxcv/sdl/: sdl_gamma.c  sdl_glimp.c  sdl_glw.h  sdl_icon.h  sdl_input.c  sdl_snd.c
codezxcv/ui/: ui_public.h
codezxcv/unix/: linux_local.h  linux_signals.c  unix_glw.h  unix_main.c  unix_shared.c
codezxcv/user/: cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_curl.h  cl_input.c  cl_jpeg.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  keycodes.h  keys.h  snd_adpcm.c  snd_codec.c  snd_codec.h  snd_codec_wav.c  snd_dma.c  snd_local.h  snd_main.c  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c  user.h
codezxcv/win32/: glw_win.h  resource.h  win_local.h  win_main.c  win_resource.rc  win_shared.c  win_syscon.c
docs/: README.Linux  README.Q3Test  filter.txt  quake3e-changes.txt  quake3e.htm
docs/LinuxSupport/: CHANGES-1.32.txt  INSTALL  index.html  udp_wide_README.txt
docs/firewall/: fw-openwrt.txt  fw-q3host.sh
(+77 files in other folders)
